--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ BOT_TITLE=@DNHBot
 BOT_NAME="Domain Name Hunter bot"
 BOT_USERNAME=@DNHBot
 BOT_ADMIN=665565849
-BOT_DEVELOPER=321958473
-BOT_OWNER="@parmonov98"
+BOT_DEVELOPER=94665561
+BOT_OWNER=@parmonov98
 BOT_TOKEN=1656380395:AAGI0dalhLBagZPWAjgL6NYAQIEJyDcbTMc
 
 DB_SERV=localhost
